# chatroom

./: CMakeLists.txt  README.md  install_nlohmann_json.sh
client/: GroupChat.cc  Notifications.cc  Notifications.h  OperationMenu.cc  StartMenu.cc  StartMenu.h  Telegram.cc  client.cc  client.h
client/controller/: OperationMenu.cc  OperationMenu.h  StartMenu.cc  StartMenu.h
client/service/: FileTransfer.cc  FileTransfer.h  Notifications.cc  Notifications.h
client/social/: FriendManager.cc  FriendManager.h  G_chat.cc  G_chat.h  G_chatctrl.cc  G_chatctrl.h  chat.cc  chat.h
imitate/: CMakeList.txt  README.md
imitate/server/: MyThreadPool.hpp  test_threadpool.cpp
server/: LoginHandler.cc  LoginHandler.h  MyThreadPool.hpp  Redis.cc  Redis.h  RedisPlus.cc  RedisPlus.h  ThreadPool.hpp  Threadpool.cpp  Transaction.cc  Transaction.h  User.cc  group_chat.cc  group_chat.h  server.cc  test.cc  tool.cc  tools.h
utils/: Group.cc  Group.h  IO.cc  IO.h  TCP.cc  User.cc  User.h  proto.cc  proto.h
